@@ -1,3 +1,15 @@
+2011-02-16  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r77898.
+        http://trac.webkit.org/changeset/77898
+        https://bugs.webkit.org/show_bug.cgi?id=54541
+
+        Leopard Debug hasn't compiled for a long time (Requested by
+        abarth on #webkit).
+
+        * Scripts/webkitpy/common/net/buildbot/buildbot.py:
+        * Scripts/webkitpy/common/net/buildbot/buildbot_unittest.py:
+
 2011-02-15  Xianzhu Wang  <wangxianzhu@google.com>
 
         Reviewed by Kent Tamura.
